force-app/main/default/objects/Cancellation__c/Cancellation__c.object-meta.xml
<CustomObject>
    <label>Cancellation</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Cancellation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>