force-app/main/default/objects/Cancellation__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>