force-app/main/default/objects/Cancellation__c/fields/Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving__c</fullName>
    <label>Reason for Leaving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campsites in unsuitable locations</fullName>
            </value>
            <value>
                <fullName>Change in Circumstance</fullName>
            </value>
            <value>
                <fullName>COVID 19</fullName>
            </value>
            <value>
                <fullName>DD Rejected</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Does Not Use Membership</fullName>
            </value>
            <value>
                <fullName>General Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>General Site Issues</fullName>
            </value>
            <value>
                <fullName>Illness/Age</fullName>
            </value>
            <value>
                <fullName>Joined Caravan Club</fullName>
            </value>
            <value>
                <fullName>Joined the wrong Club</fullName>
            </value>
            <value>
                <fullName>Moved Abroad</fullName>
            </value>
            <value>
                <fullName>Not enough campsites</fullName>
            </value>
            <value>
                <fullName>No Unit</fullName>
            </value>
            <value>
                <fullName>Partner Deceased</fullName>
            </value>
            <value>
                <fullName>Changed to Refer to Manager status</fullName>
                <label>Refer to Manager status</label>
            </value>
            <value>
                <fullName>Re-Joined (late renewal)</fullName>
            </value>
            <value>
                <fullName>Requested Right to Erasure</fullName>
            </value>
            <value>
                <fullName>See Notes</fullName>
            </value>
            <value>
                <fullName>Taking other holidays</fullName>
            </value>
            <value>
                <fullName>Test Membership</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Unhappy with Membership</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>