force-app/main/default/objects/Cancellation__c/fields/Stop_Communication__c.field-meta.xml
<CustomField>
    <fullName>Stop_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Communication</label>
    <type>Checkbox</type>
</CustomField>