force-app/main/default/objects/Cancellation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Membership_Number__c</columns>
    <columns>Membership__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Cancellation_Date__c</columns>
    <columns>Cancellation_Type__c</columns>
    <columns>Reason_for_Leaving__c</columns>
    <columns>Refund_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cancellation_Type__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Cancellation_Type__c</field>
        <operation>notContain</operation>
        <value>Non-Renewer,Ex-Member</value>
    </filters>
    <label>All Cancelled</label>
</ListView>