force-app/main/default/objects/Cancellation__c/listViews/cancellations.listView-meta.xml
<ListView>
    <fullName>cancellations</fullName>
    <columns>Membership_Number__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Cancellation_Date__c</columns>
    <columns>Cancellation_Type__c</columns>
    <columns>Refund_Amount__c</columns>
    <columns>Reason_for_Leaving__c</columns>
    <columns>Stop_Communication__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cancellation_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Cancellation_Type__c</field>
        <operation>notContain</operation>
        <value>Ex-Member</value>
    </filters>
    <label>cancellations - last 7 days</label>
</ListView>