force-app/main/default/objects/Cancellation__c/listViews/Cancellations_Today.listView-meta.xml
<ListView>
    <fullName>Cancellations_Today</fullName>
    <columns>Cancellation_Date__c</columns>
    <columns>Cancellation_Type__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Reason_for_Leaving__c</columns>
    <columns>Refund_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cancellation_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Cancellation_Type__c</field>
        <operation>notContain</operation>
        <value>Ex-Member</value>
    </filters>
    <label>Cancellations Today - Service Centre</label>
</ListView>