force-app/main/default/objects/Cancellation__c/listViews/Ex_Member_List.listView-meta.xml
<ListView>
    <fullName>Ex_Member_List</fullName>
    <columns>Membership_Number__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Cancellation_Date__c</columns>
    <columns>Cancellation_Type__c</columns>
    <columns>Reason_for_Leaving__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cancellation_Type__c</field>
        <operation>equals</operation>
        <value>Ex-Member</value>
    </filters>
    <label>Ex-Member List</label>
</ListView>